--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "mongoose": "^5.9.20",
     "morgan": "^1.10.0",
     "normalize-port": "^1.0.0",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
