--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.20",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "node-cache": "^5.1.2",
     "normalize-port": "^1.0.0",
     "passport": "^0.4.1",
     "passport-facebook-token": "^4.0.0",
     "passport-google-plus-token": "^2.1.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "tmp": "^0.2.1",
     "winston": "^3.3.3"
   },
   "devDependencies": {
