--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hbs": "^4.1.1",
     "helmet": "^3.23.3",
     "http-status-codes": "^1.4.0",
+    "joi-objectid": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.20",
     "morgan": "^1.10.0",
@@ -36,16 +37,12 @@
     "passport-google-plus-token": "^2.1.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-
     "react-data-table-component": "^6.11.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-
-
     "tmp": "^0.2.1",
-
     "winston": "^3.3.3"
   },
   "devDependencies": {
